--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Fajar Nazmi Fadillah",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.4"
