--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.0",
+    "config": "^3.3.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.4"
   },
   "devDependencies": {
