Change heroku postbuild key value

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js --exec babel-node --presets babel-preset-env",
-    "heroku-postbuild": "nodemon server.js --exec babel-node --presets babel-preset-env"
+    "heroku-postbuild": "node server.js --exec babel-node --presets babel-preset-env"
   },
   "author": "Fajar Nazmi Fadillah",
   "license": "MIT",
