--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://dbAdmin:C3IR85YDZPC8xDPC@cluster0.9fe0w.mongodb.net
-MONGO_DB_NAME=myFirstDatabase
+MONGO_URI=mongodb://127.0.0.1:27017
+MONGO_DB_NAME=klasifikasi-masker
 JWT_SECRET=kmskr_TAFajarNF
