--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
+    "dayjs": "^1.10.6",
+    "enquire-js": "^0.2.1",
+    "js-cookie": "^3.0.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
