--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "enquire-js": "^0.2.1",
     "js-cookie": "^3.0.0",
     "lodash": "^4.17.21",
-    "node-sass": "^6.0.1",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
